# cmake

./: CMakeLists.txt  CommonConfig.cmake  readme.md
.github/workflows/: c-cpp.yml  ci.yml  release.yml
src/: AddQtTest.cmake  AddResourceInfo.cmake  CMakeLists.txt  CodeCoverage.cmake  CommonConfig.cmake  CompilerFlags.cmake  Cppcheck.cmake  Doxygen.cmake  GeneratePackage.cmake  GetVersionFromGitTag.cmake  Methods.cmake  Translations.cmake  app-config.cmake.in  config.cmake.in  coverage-check.sh
src/manifest/: AddManifest.cmake  exe.manifest.in
tests/: CMakeLists.txt
tests/AddResourceInfo/: CMakeLists.txt
tests/valgrind/: CMakeLists.txt
